--- a/app/src/main/res/xml/adapter.xml
+++ b/app/src/main/res/xml/adapter.xml
@@ -2,9 +2,9 @@
 
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
 	android:accountType="@string/account_type"
-	android:allowParallelSyncs="false"
+	android:allowParallelSyncs="true"
 	android:contentAuthority="@string/authority"
 	android:isAlwaysSyncable="true"
-	android:supportsUploading="false"
-	android:userVisible="false"
+	android:supportsUploading="true"
+	android:userVisible="true"
 	/>
